package isep.switchdev.Enum;

public enum Genre {
    Romance,
    Fantasy,
    Fiction,
    History,
    Crime,
    Adventure,
}
